# AlgoToolKit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-release.yml
src/: main.cpp
src/Algorithms/: GraphAlgorithm.h  RecursionAlgorithm.h  SortingAlgorithm.cpp  SortingAlgorithm.h
src/Menu/: ImGuiHelper.cpp  ImGuiHelper.h  Menu.cpp  Menu.h
src/Resources/: FontAwesome.h
src/Visualizer/: Visualizer.cpp  Visualizer.h
